# pyzetasql

./: .gitmodules  LICENSE  README.md  build.py  build.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
pyzetasql/: .gitignore  __init__.py  zetasql_service.py
test/: zetasql_service_test.py
